--- a/07-framework/pom.xml
+++ b/07-framework/pom.xml
@@ -77,6 +77,21 @@
                         <groups>${groups}</groups>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>com.github.webdriverextensions</groupId>
+                    <artifactId>webdriverextensions-maven-plugin</artifactId>
+                    <version>3.1.3</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>install-drivers</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <installationDirectory>../drivers</installationDirectory>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
